...
                      value: MenuItem.item4,
                      child: Text('All'),
                    )
                  ]))
        ],
      ),
      floatingActionButton: FloatingActionButton(
          key: const Key('floatingActionButton'),
          backgroundColor: colorAppBar,
          child: const Icon(Icons.add_circle),
          onPressed: () {
            mainViewBloc.add(NavToNoteView(context));
          }),
...
